--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
 <html>
  <head>
     <title>Ben Gilbert</title>
+   
+   <style>
+      
+        body {
+            font-family: sans-serif;
+            display: grid;
+            align-content: center;
+            text-align: center;
+            background: red;
+        }
+        h1 {
+            font-size: 48px;
+            text-transform: uppercase;
+            margin: 0;
+        }
+        p {
+            color: white;
+        }
+    </style>
  </head>
 
  <body>
