removed css added list

--- a/index.html
+++ b/index.html
@@ -1,25 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
  <head>
+     <meta charset="utf-8" />
     <title>Ben Gilbert</title>
-   
-   <style>
-      
-        body {
-            font-family: sans-serif;
-            display: grid;
-            align-content: center;
-            text-align: center;
-            background: red;
-        }
-        h1 {
-            font-size: 48px;
-            text-transform: uppercase;
-            margin: 0;
-        }
-        p {
-            color: white;
-        }
-    </style>
+   <meta name="description" content="This is my student website." />
+   <meta name="viewport" content="width+device-width, initial-cale=1" />
  </head>
 
  <body>
@@ -29,5 +14,10 @@
         construction. Soon it will contain links to my coursework for my classes
         at KCC within the New Media Arts program.
     </p>
+    <ul>
+        <li>Temporary class item</li>
+        <li>Second class item</li>
+        <li>Third class item of temp status</li>
+    </ul>
  </body>
 </html>
