--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
  <body>
     <h2>Hi, I am Ben.</h2>
     <p>
-        I am an interface design student.This site is currently under
-        construction. Soon it will contain links to my coursework for my classes
-        at KCC within the New Media Arts program.
+        I am an fictional website design student.This site is currently under
+        construction. Soon, I will be posting my course assignments and portfolio here.
     </p>
     <ul>
-        <li>Temporary class item</li>
-        <li>Second class item</li>
-        <li>Third class item of temp status</li>
+        <li><a href="art128/index">ART 128 Interface Programming I</a></a></li>
+        
     </ul>
  </body>
 </html>
