--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <title>Ben Gilbert</title>
    <meta name="description" content="This is my student website." />
    <meta name="viewport" content="width+device-width, initial-cale=1" />
+   <link href="css/style.css" rel="stylesheet" type="text/css" />
  </head>
 
  <body>
-    <h2>Hi, I am Ben.</h2>
+    <h1>Hi, I am Ben.</h1>
     <p>
         I am an fictional website design student.This site is currently under
         construction. Soon, I will be posting my course assignments and portfolio here.
     </p>
+
+    <h2>My Courses:</h2>
     <ul>
         <li><a href="art128/index">ART 128 Interface Programming I</a></a></li>
         
