added site structure

--- a/index.html
+++ b/index.html
@@ -1,24 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
  <head>
      <meta charset="utf-8" />
     <title>Ben Gilbert</title>
-   <meta name="description" content="This is my student website." />
-   <meta name="viewport" content="width+device-width, initial-cale=1" />
+   <meta name="description" content="This is an example  website for Ben Gilbert." />
+   <meta name="viewport" content="width=device-width, initial-scale=1" />
+   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
    <link href="css/style.css" rel="stylesheet" type="text/css" />
  </head>
 
  <body>
-    <h1>Hi, I am Ben.</h1>
-    <p>
-        I am an fictional website design student.This site is currently under
-        construction. Soon, I will be posting my course assignments and portfolio here.
-    </p>
-
-    <h2>My Courses:</h2>
-    <ul>
-        <li><a href="art128/index">ART 128 Interface Programming I</a></a></li>
-        
-    </ul>
+     <header>
+         <div class="site-id">
+           <h1><a href="index.html">BG</a></h1>
+         </div>
+          <nav class="site-nav">
+              <ul>
+                <li><a href="art128/index.html">ART 128</a></li>
+                <li><a href="notes/index.html">Notes</a></li>
+              </ul>
+            </nav>
+        </header>
+     <main>
+         <section class="hero">
+              <h2>Hi, I am Ben.</h2>
+             <p>I am a website design student. This site is under construction. Soon, I will be posting my course assignments and portfolio here.</p>
+         </section>
+         <section class="courses">
+             <h3>My Courses:</h3>
+             <ul>
+             <li><a href="art128/index">ART 128 Interface Programming 1</a></a></li>    
+             </ul>
+          </section>
+     </main> 
+     
+     <footer>
+         <nav class="social-nav">
+         <ul>
+             <li><a href="https://github.com/mrgilbertb">My Github</a></li>
+             <li><a href="https://codepen.io/mrgilbertb>">My Codepen</a></li>
+         </ul>
+         </nav>
+     </footer>
  </body>
+
 </html>
