--- a/art128/index.html
+++ b/art128/index.html
@@ -39,9 +39,7 @@
              <div class="project">
                 <h3>Site #2 Site Base</h3>
                 <ul>
-                <li>[ Assignments comming soon}</li> 
-                <li>[ ... ] </li>
-                <li>[ ... ]</li>    
+                  <li><a href= "base-blank/index.html">base blank</a> </li>
                 </ul>
                 </div>
 
