--- a/art128/index.html
+++ b/art128/index.html
@@ -40,6 +40,7 @@
                 <h3>Site #2 Site Base</h3>
                 <ul>
                   <li><a href= "base-blank/index.html">base blank</a> </li>
+                  <li><a href= "base-content/index.html">base content</a> </li>
                 </ul>
                 </div>
 
