--- a/art128/index.html
+++ b/art128/index.html
@@ -41,6 +41,7 @@
                 <ul>
                   <li><a href= "base-blank/index.html">base blank</a> </li>
                   <li><a href= "base-content/index.html">base content</a> </li>
+                  <li><a href= "base-layout/index.html">base layout</a> </li>
                 </ul>
                 </div>
 
