--- a/art128/index.html
+++ b/art128/index.html
@@ -42,6 +42,7 @@
                   <li><a href= "base-blank/index.html">base blank</a> </li>
                   <li><a href= "base-content/index.html">base content</a> </li>
                   <li><a href= "base-layout/index.html">base layout</a> </li>
+                  <li><a href="base-site/index.html">base structure</a> </li>
                 </ul>
                 </div>
 
