--- a/art128/index.html
+++ b/art128/index.html
@@ -43,6 +43,7 @@
                   <li><a href= "base-content/index.html">base content</a> </li>
                   <li><a href= "base-layout/index.html">base layout</a> </li>
                   <li><a href="base-site/index.html">base structure</a> </li>
+                  <li><a href="base-togglenav/index.html">toggle nav</a> </li>
                 </ul>
                 </div>
 
