edit fixed naming mistake

--- a/art128/index.html
+++ b/art128/index.html
@@ -44,7 +44,7 @@
                   <li><a href= "base-layout/index.html">base layout</a> </li>
                   <li><a href="base-site/index.html">base structure</a> </li>
                   <li><a href="base-togglenav/index.html">toggle nav</a> </li>
-                  <li><a href="base-subpages/index.html">subpage about</a> </li>
+                  <li><a href="base-subpages/index.html">subpage about/contact</a> </li>
                 </ul>
                 </div>
 
