single page scroll completed

--- a/art128/index.html
+++ b/art128/index.html
@@ -45,6 +45,7 @@
                   <li><a href="base-site/index.html">base structure</a> </li>
                   <li><a href="base-togglenav/index.html">toggle nav</a> </li>
                   <li><a href="base-subpages/index.html">subpage about/contact</a> </li>
+                  <li><a href="singlepage/index.html">single page</a> </li>
                 </ul>
                 </div>
 
