added start to BYOC

--- a/art128/index.html
+++ b/art128/index.html
@@ -50,9 +50,9 @@
                 </div>
 
                 <div class="project">
-                    <h3>Site #3 ____</h3>
+                    <h3>BYOC</h3>
                     <ul>
-                    <li>[ Assignments comming soon}</li> 
+                    <li><a href="byoc_v1/index.html">BYOC</a></li> 
                     <li>[ ... ] </li>
                     <li>[ ... ]</li>    
                     </ul>
